--- a/car-dealership-app/package.json
+++ b/car-dealership-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.8.2",
@@ -22,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1"
   }
 }
